--- a/application/android/app/src/main/res/layout/fragment_search_posts.xml
+++ b/application/android/app/src/main/res/layout/fragment_search_posts.xml
@@ -30,13 +30,25 @@
         app:layout_constraintStart_toStartOf="@id/fragment_search_posts_guideline_start"
         app:layout_constraintEnd_toEndOf="@id/fragment_search_posts_guideline_end">
 
-        <com.google.android.material.textfield.MaterialAutoCompleteTextView
+        <com.makentoshe.booruchan.application.android.screen.search.view.DelayMaterialAutocompleteTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textAutoComplete"
             android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <ProgressBar
+        android:visibility="gone"
+        style="@style/Default.Progress"
+        android:id="@+id/fragment_search_posts_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:paddingVertical="@dimen/dimenXS"
+        android:layout_marginTop="6dp"
+        app:layout_constraintTop_toTopOf="@id/fragment_search_posts_input"
+        app:layout_constraintEnd_toEndOf="@id/fragment_search_posts_input"
+        app:layout_constraintBottom_toBottomOf="@id/fragment_search_posts_input" />
 
 
 
@@ -84,7 +96,6 @@
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
 
-
     <androidx.constraintlayout.widget.Group
         android:id="@+id/fragment_search_posts_tags_artist"
         android:layout_width="wrap_content"
@@ -117,7 +128,6 @@
             app:singleLine="true" />
 
     </HorizontalScrollView>
-
 
 
     <androidx.constraintlayout.widget.Group
