--- a/application/android/app/src/main/res/layout/fragment_search_posts.xml
+++ b/application/android/app/src/main/res/layout/fragment_search_posts.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -51,7 +52,6 @@
         app:layout_constraintBottom_toBottomOf="@id/fragment_search_posts_input" />
 
 
-
     <TextView
         style="@style/Default.Text.Support"
         android:id="@+id/fragment_search_posts_rating_title"
@@ -95,8 +95,8 @@
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
-
     <androidx.constraintlayout.widget.Group
+        android:visibility="gone"
         android:id="@+id/fragment_search_posts_tags_artist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -117,24 +117,26 @@
         android:id="@+id/fragment_search_posts_tags_artist_scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/fragment_search_posts_tags_artist_title"
-        app:layout_constraintStart_toStartOf="@id/fragment_search_posts_guideline_start"
-        app:layout_constraintEnd_toEndOf="@id/fragment_search_posts_guideline_end">
+        android:clipToPadding="false"
+        android:paddingHorizontal="8dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_search_posts_tags_artist_title">
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/fragment_search_posts_tags_artist_chips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:chipSpacingHorizontal="@dimen/dimenS"
             app:singleLine="true" />
 
     </HorizontalScrollView>
 
 
     <androidx.constraintlayout.widget.Group
+        android:visibility="gone"
         android:id="@+id/fragment_search_posts_tags_general"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="fragment_search_posts_tags_general_title, fragment_search_posts_tags_general_scroll" />
+        app:constraint_referenced_ids="fragment_search_posts_tags_general_title, fragment_search_posts_tags_general_chips" />
 
     <TextView
         style="@style/Default.Text.Support"
@@ -147,20 +149,12 @@
         app:layout_constraintTop_toBottomOf="@id/fragment_search_posts_tags_artist_scroll"
         app:layout_constraintStart_toStartOf="@id/fragment_search_posts_guideline_start" />
 
-    <HorizontalScrollView
-        android:id="@+id/fragment_search_posts_tags_general_scroll"
-        android:layout_width="match_parent"
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/fragment_search_posts_tags_general_chips"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/fragment_search_posts_tags_general_title"
         app:layout_constraintStart_toStartOf="@id/fragment_search_posts_guideline_start"
-        app:layout_constraintEnd_toEndOf="@id/fragment_search_posts_guideline_end">
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/fragment_search_posts_tags_general_chips"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:singleLine="true" />
-
-    </HorizontalScrollView>
+        app:layout_constraintEnd_toEndOf="@id/fragment_search_posts_guideline_end" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
