--- a/application/android/app/src/main/res/layout/fragment_search_posts.xml
+++ b/application/android/app/src/main/res/layout/fragment_search_posts.xml
@@ -34,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textAutoComplete"
+            android:imeOptions="actionDone"
             android:maxLines="1" />
 
     </com.google.android.material.textfield.TextInputLayout>
