--- a/application/android/app/src/main/res/menu/booru_navigation.xml
+++ b/application/android/app/src/main/res/menu/booru_navigation.xml
@@ -10,7 +10,7 @@
     <item
         android:id="@+id/booru_navigation_posts"
         android:enabled="true"
-        android:icon="@drawable/ic_view_dashboard"
+        android:icon="@drawable/ic_dashboard"
         android:title="@string/booru_navigation_posts" />
 
     <item
