--- a/application/android/app/src/main/res/layout/fragment_posts.xml
+++ b/application/android/app/src/main/res/layout/fragment_posts.xml
@@ -76,7 +76,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:visibility="gone"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
+                style="?attr/booruchanButtonText"
                 android:id="@+id/fragment_posts_retry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
