--- a/application/android/app/src/main/res/layout/fragment_posts.xml
+++ b/application/android/app/src/main/res/layout/fragment_posts.xml
@@ -30,16 +30,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/fragment_posts_recycler"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:visibility="invisible"
+                android:id="@+id/fragment_posts_swipe"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:paddingTop="@dimen/dimenS"
-                android:clipToPadding="false"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/dimenXS"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintBottom_toBottomOf="parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/fragment_posts_recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
             <ProgressBar
                 style="?attr/booruchanProgress"
