--- a/application/android/app/src/main/res/layout/fragment_sample_content.xml
+++ b/application/android/app/src/main/res/layout/fragment_sample_content.xml
@@ -21,4 +21,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:ignore="ContentDescription" />
 
+    <androidx.fragment.app.FragmentContainerView
+        android:background="@android:color/holo_purple"
+        android:id="@+id/fragment_sample_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
