--- a/application/android/app/src/main/res/layout/fragment_sample_image.xml
+++ b/application/android/app/src/main/res/layout/fragment_sample_image.xml
@@ -10,6 +10,7 @@
         android:id="@+id/fragment_sample_progress_indeterminate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:translationZ="1dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -17,9 +18,17 @@
 
     <ImageView
         android:visibility="gone"
+        android:id="@+id/fragment_sample_preview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:ignore="ContentDescription" />
+
+    <ImageView
+        android:visibility="gone"
         android:id="@+id/fragment_sample_sample"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:translationZ="2dp"
         tools:ignore="ContentDescription" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
