feat(android): Implement close navigation on SampleCloseFragment select

--- a/application/android/app/src/main/res/values-night/colors.xml
+++ b/application/android/app/src/main/res/values-night/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="background">#141414</color>
+    <color name="half_background">#80141414</color>
     <color name="separator">#373737</color>
     <color name="text">#FFFFFF</color>
     <color name="dimmed">#80FFFFFF</color>
