--- a/application/android/app/src/main/res/drawable/fragment_sample_close_background.xml
+++ b/application/android/app/src/main/res/drawable/fragment_sample_close_background.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <gradient
         android:angle="-90"
-        android:startColor="@android:color/transparent"
+        android:startColor="@color/half_background"
         android:endColor="@color/background" />
 </shape>
