--- a/application/android/app/src/main/res/values/colors.xml
+++ b/application/android/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="background">#FFFFFF</color>
+    <color name="half_background">#80FFFFFF</color>
     <color name="separator">#E0E0E0</color>
     <color name="text">#0C0C0D</color>
     <color name="dimmed">#99000000</color>
