--- a/application/android/app/src/main/res/layout/fragment_posts_item.xml
+++ b/application/android/app/src/main/res/layout/fragment_posts_item.xml
@@ -9,6 +9,7 @@
         android:id="@+id/fragment_posts_item_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:translationZ="4dp"
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <com.facebook.shimmer.ShimmerFrameLayout
