feat(android): Add displaying Image, Video and Animation types in posts screen

--- a/application/android/app/src/main/res/values/colors.xml
+++ b/application/android/app/src/main/res/values/colors.xml
@@ -16,4 +16,8 @@
     <color name="tags_metadata">#FDC023</color>
     <color name="tags_copyright">#AA00AA</color>
     <color name="tags_general">#000000</color>
+
+    <color name="content_image">@color/opaque</color>
+    <color name="content_animation">#FF00FF</color>
+    <color name="content_video">#0000FF</color>
 </resources>
