--- a/application/android/app/src/main/res/layout/fragment_posts_item.xml
+++ b/application/android/app/src/main/res/layout/fragment_posts_item.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/opaque"
+    android:padding="3dp">
 
     <TextView
         android:id="@+id/fragment_posts_item_text"
