feat(android): Fix video player and make it full screen

--- a/application/android/app/src/main/res/layout/fragment_sample_video.xml
+++ b/application/android/app/src/main/res/layout/fragment_sample_video.xml
@@ -15,7 +15,8 @@
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/fragment_sample_player"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        app:surface_type="texture_view"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
