feat(android): Add progress bar for video player

--- a/application/android/app/src/main/res/layout/fragment_sample_video.xml
+++ b/application/android/app/src/main/res/layout/fragment_sample_video.xml
@@ -5,6 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ProgressBar
+        style="@style/Default.Progress"
+        android:id="@+id/fragment_sample_progress_indeterminate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:translationZ="1dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
     <ImageView
         android:visibility="gone"
         android:id="@+id/fragment_sample_preview"
@@ -16,6 +27,7 @@
         android:id="@+id/fragment_sample_player"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:shutter_background_color="@color/background"
         app:surface_type="texture_view"
         app:layout_constraintTop_toTopOf="parent" />
 
