--- a/application/android/app/src/main/res/layout/fragment_sample_video.xml
+++ b/application/android/app/src/main/res/layout/fragment_sample_video.xml
@@ -10,25 +10,20 @@
         android:id="@+id/fragment_sample_progress_indeterminate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:translationZ="1dp"
+        android:translationZ="3dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
-
-    <ImageView
-        android:visibility="gone"
-        android:id="@+id/fragment_sample_preview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:ignore="ContentDescription" />
 
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/fragment_sample_player"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:shutter_background_color="@color/background"
+        app:use_artwork="true"
         app:surface_type="texture_view"
+        android:translationZ="2dp"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
