--- a/application/android/app/src/main/res/layout/fragment_sample_video.xml
+++ b/application/android/app/src/main/res/layout/fragment_sample_video.xml
@@ -16,6 +16,41 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <TextView
+        android:visibility="gone"
+        style="@style/Default.Text.Main"
+        android:id="@+id/fragment_sample_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:visibility="gone"
+        style="@style/Default.Text.Support"
+        android:id="@+id/fragment_sample_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingHorizontal="@dimen/dimenL"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_sample_title" />
+
+    <com.google.android.material.button.MaterialButton
+        android:visibility="gone"
+        style="?attr/booruchanButtonText"
+        android:id="@+id/fragment_sample_retry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/posts_button_retry"
+        android:layout_marginTop="@dimen/dimenL"
+        app:layout_constraintTop_toBottomOf="@id/fragment_sample_message"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/fragment_sample_player"
         android:layout_width="match_parent"
