--- a/application/android/app/src/main/res/values/styles.xml
+++ b/application/android/app/src/main/res/values/styles.xml
@@ -63,4 +63,10 @@
         <item name="android:textColor">@color/button_text_foreground_color</item>
     </style>
 
+    <style name="Default.Button.Outline" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textColor">@color/dimmed</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="strokeColor">@color/dimmed</item>
+    </style>
+
 </resources>
