--- a/application/android/app/src/main/res/layout/layout_voting.xml
+++ b/application/android/app/src/main/res/layout/layout_voting.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layout_rating"
+    android:id="@+id/layout_voting"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         style="@style/Default.Text.Support"
-        android:id="@+id/layout_rating_text"
+        android:id="@+id/layout_voting_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/posts_search_rating"
@@ -15,33 +15,28 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.button.MaterialButtonToggleGroup
-        android:id="@+id/layout_rating_toggle"
+        android:id="@+id/layout_voting_toggle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:singleSelection="true"
         app:selectionRequired="false"
-        app:layout_constraintTop_toBottomOf="@id/layout_rating_text">
+        app:layout_constraintTop_toBottomOf="@id/layout_voting_text">
 
         <Button
             style="@style/Default.Button.Toggle"
-            android:id="@+id/layout_rating_safe"
+            android:id="@+id/layout_voting_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/rating_type_safe" />
+            android:layout_weight="1"
+            android:text="@string/layout_voting_up" />
 
         <Button
             style="@style/Default.Button.Toggle"
-            android:id="@+id/layout_rating_questionable"
+            android:id="@+id/layout_voting_down"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/rating_type_questionable" />
-
-        <Button
-            style="@style/Default.Button.Toggle"
-            android:id="@+id/layout_rating_explicit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/rating_type_explicit" />
+            android:layout_weight="1"
+            android:text="@string/layout_voting_down" />
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
