--- a/application/android/app/src/main/res/layout/fragment_sample_info.xml
+++ b/application/android/app/src/main/res/layout/fragment_sample_info.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background">
@@ -25,6 +25,30 @@
             android:layout_marginHorizontal="@dimen/dimenS"
             android:layout_marginTop="@dimen/dimenM" />
 
+        <include
+            layout="@layout/layout_voting"
+            android:id="@+id/fragment_sample_info_voting"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginHorizontal="@dimen/dimenS"
+            android:layout_marginTop="@dimen/dimenM" />
+
+        <include
+            layout="@layout/layout_rating"
+            android:id="@+id/fragment_sample_info_rating"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginHorizontal="@dimen/dimenS"
+            android:layout_marginTop="@dimen/dimenM" />
+
+        <include
+            layout="@layout/layout_tags"
+            android:id="@+id/fragment_sample_info_tags"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginHorizontal="@dimen/dimenS"
+            android:layout_marginTop="@dimen/dimenM" />
+
     </LinearLayout>
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
