--- a/application/android/app/src/main/res/layout/fragment_sample_info.xml
+++ b/application/android/app/src/main/res/layout/fragment_sample_info.xml
@@ -1,54 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/background">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <include
+        layout="@layout/layout_download"
+        android:id="@+id/fragment_sample_info_download"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="@dimen/dimenS"
+        android:layout_marginTop="@dimen/dimenM" />
 
-        <include
-            layout="@layout/layout_download"
-            android:id="@+id/fragment_sample_info_download"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_marginHorizontal="@dimen/dimenS"
-            android:layout_marginTop="@dimen/dimenM" />
+    <include
+        layout="@layout/layout_comments"
+        android:id="@+id/fragment_sample_info_comments"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="@dimen/dimenS"
+        android:layout_marginTop="@dimen/dimenM" />
 
-        <include
-            layout="@layout/layout_comments"
-            android:id="@+id/fragment_sample_info_comments"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_marginHorizontal="@dimen/dimenS"
-            android:layout_marginTop="@dimen/dimenM" />
+    <include
+        layout="@layout/layout_voting"
+        android:id="@+id/fragment_sample_info_voting"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="@dimen/dimenS"
+        android:layout_marginTop="@dimen/dimenM" />
 
-        <include
-            layout="@layout/layout_voting"
-            android:id="@+id/fragment_sample_info_voting"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_marginHorizontal="@dimen/dimenS"
-            android:layout_marginTop="@dimen/dimenM" />
+    <include
+        layout="@layout/layout_rating"
+        android:id="@+id/fragment_sample_info_rating"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="@dimen/dimenS"
+        android:layout_marginTop="@dimen/dimenM" />
 
-        <include
-            layout="@layout/layout_rating"
-            android:id="@+id/fragment_sample_info_rating"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_marginHorizontal="@dimen/dimenS"
-            android:layout_marginTop="@dimen/dimenM" />
+    <include
+        layout="@layout/layout_tags"
+        android:id="@+id/fragment_sample_info_tags"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="@dimen/dimenS"
+        android:layout_marginTop="@dimen/dimenM" />
 
-        <include
-            layout="@layout/layout_tags"
-            android:id="@+id/fragment_sample_info_tags"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:layout_marginHorizontal="@dimen/dimenS"
-            android:layout_marginTop="@dimen/dimenM" />
-
-    </LinearLayout>
-
-</androidx.core.widget.NestedScrollView>
+</LinearLayout>
