feat(android): Disable touches when content loading

--- a/application/android/app/src/main/res/layout/fragment_posts.xml
+++ b/application/android/app/src/main/res/layout/fragment_posts.xml
@@ -1,23 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
     android:orientation="vertical">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        style="@style/Default.Toolbar"
-        android:id="@+id/fragment_posts_toolbar"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/fragment_posts_appbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/toolbar_height"
-        app:menu="@menu/posts_toolbar" />
+        android:fitsSystemWindows="true"
+        >
 
-    <View
-        style="@style/Default.Separator"
-        android:id="@+id/fragment_posts_separator"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbar_separator_height" />
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/fragment_posts_collapsing"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:titleEnabled="false"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+            app:toolbarId="@id/fragment_posts_toolbar">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.google.android.material.appbar.MaterialToolbar
+                    style="@style/Default.Toolbar"
+                    android:id="@+id/fragment_posts_toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/toolbar_height"
+                    app:menu="@menu/posts_toolbar" />
+
+                <View
+                    style="@style/Default.Separator"
+                    android:id="@+id/fragment_posts_separator"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/toolbar_separator_height" />
+
+            </LinearLayout>
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <com.sothree.slidinguppanel.SlidingUpPanelLayout
         android:id="@+id/fragment_posts_panel"
@@ -25,17 +52,19 @@
         android:layout_height="match_parent"
         app:umanoOverlay="true"
         app:umanoPanelHeight="0dp"
-        android:gravity="top">
+        android:gravity="top"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:id="@+id/fragment_posts_swipe"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:enabled="false"
                 android:layout_marginHorizontal="@dimen/dimenXS"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent">
@@ -43,7 +72,10 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/fragment_posts_recycler"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:nestedScrollingEnabled="false"
+                    android:paddingTop="@dimen/dimenS"
+                    android:clipToPadding="false" />
 
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
@@ -103,4 +135,4 @@
 
     </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
